--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Jia Guo</title>
+<title>About</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -315,39 +315,64 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Jia Guo</h1>
+<h1 class="title toc-ignore">About</h1>
 
 </div>
 
 
-<p><link rel="stylesheet" href="academicons.css"/> <link rel="stylesheet" href="styles.css" type="text/css"/></p>
+<p><link rel="stylesheet" href="academicons.css"/> <link rel="stylesheet" href="styles.css" type="text/css"/> <link rel="stylesheet" href="timeline.css"/ type='text/css'></p>
 <hr />
-<h3>
-Ph.D. candidate in Biostatistics at Columbia University
-</h3>
-<center>
-<img src="images/selfie.jpg" style="width:75%">
-</center>
-<p align="left">
-</p>
-<p align="left">
-I’m a second-year Ph.D. student in Biostatistics at Columbia University Mailman School of Public Health.
-</p>
-<!--
-<c1> [Research Projects](research.html) </c1> | <c1> [Class Projects](overview.html) </c1> | <c1> [Relevant Coursework](coursework.html) </c1>
-:--------------------------: | :------------------------: | :------------------------:
--->
-<h3>
-Contact Information:
-</h3>
-<p>
-Jia Guo, M.S.<br />
-Ph.D. candidate<br />
-<a href="http://www.mailman.columbia.edu/academics/departments/biostatistics">Department of Biostatistics</a><br />
-<a href="http://www.mailman.columbia.edu">Columbia University Mailman School of Public Health</a><br />
-722 West 168th Street, New York, NY 10032<br />
-<a href="mailto:jg3780@cumc.columbia.edu" class="email">jg3780@cumc.columbia.edu</a>
-</p>
+<!-- The Timeline -->
+<ul class="timeline">
+<!-- Item 1 -->
+<li>
+<div class="direction-l">
+<div class="flag-wrapper">
+<p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">September 2018 - present</span></span></p>
+</div>
+<p><img src="images/columbia.png" style="width:14%"></p>
+<div class="desc">
+Currently I’m pursuing a Ph.D. in Biostatistics. Advised by <a href="http://www.columbia.edu/~sw2206/">Dr. Shuang Wang</a>, my research focused on applications of deep learning for electronic health record (EHR) data analysis.
+</div>
+</div>
+</li>
+<!-- Item 2 -->
+<li>
+<div class="direction-r">
+<div class="flag-wrapper">
+<p><span class="flag">MediaMath</span> <span class="time-wrapper"><span class="time">Summer 2018</span></span></p>
+</div>
+<p><img src="images/mediamath.png" style="width:16%"></p>
+<div class="desc">
+I previously worked as an Engineer Intern developing machine learning projects at <a href="http://www.mediamath.com">MediaMath</a>.
+</div>
+</div>
+</li>
+<!-- Item 3 -->
+<li>
+<div class="direction-l">
+<div class="flag-wrapper">
+<p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">2016 - 2018</span></span></p>
+</div>
+<p><img src="images/columbia.png" style="width:14%"></p>
+<div class="desc">
+I received a M.S. in Biostatistics with a concentration on Statitical Genetics at Columbia University.
+</div>
+</div>
+</li>
+<!-- Item 4 -->
+<li>
+<div class="direction-r">
+<div class="flag-wrapper">
+<p><span class="flag">Sun Yat-sen University</span> <span class="time-wrapper"><span class="time">2012 - 2016</span></span></p>
+</div>
+<p><img src="images/SYSU.png" style="width:14%"></p>
+<div class="desc">
+I completed my B.S. in Mathematics at Sun Yat-sen University, Guangzhou, China.
+</div>
+</div>
+</li>
+</ul>
 
 
 
