--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ Ph.D. candidate in Biostatistics at Columbia University
 <p align="left">
 </p>
 <p align="left">
-I’m a second-year Ph.D. student in Biostatistics at Columbia University Mailman School of Public Health.
+I’m a second-year Ph.D. student in Biostatistics at Columbia University Mailman School of Public Health. My research focused on deep learning, natural language processing (NLP), electronic health record (EHR) data, and statistical genetics. <a href="about.html">More about me.</a>
 </p>
 <!--
 <c1> [Research Projects](research.html) </c1> | <c1> [Class Projects](overview.html) </c1> | <c1> [Relevant Coursework](coursework.html) </c1>
