update media page

--- a/about.html
+++ b/about.html
@@ -340,7 +340,7 @@ $(document).ready(function () {
 <div class="flag-wrapper">
 <p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">September 2018 - present</span></span></p>
 </div>
-<p><img src="images/columbia.png" style="width:14%"></p>
+<p><img src="images/columbia_white.png" style="width:14%"></p>
 <div class="desc">
 Currently I’m pursuing a Ph.D. in Biostatistics. Advised by <a href="http://www.columbia.edu/~sw2206/">Dr. Shuang Wang</a>, my research focused on applications of deep learning for electronic health record (EHR) data analysis.
 </div>
@@ -364,7 +364,7 @@ I previously worked as an Engineer Intern developing machine learning projects a
 <div class="flag-wrapper">
 <p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">2016 - 2018</span></span></p>
 </div>
-<p><img src="images/columbia.png" style="width:14%"></p>
+<p><img src="images/columbia_white.png" style="width:14%"></p>
 <div class="desc">
 I received a M.S. in Biostatistics with a concentration on Statitical Genetics at Columbia University.
 </div>
@@ -376,7 +376,7 @@ I received a M.S. in Biostatistics with a concentration on Statitical Genetics a
 <div class="flag-wrapper">
 <p><span class="flag">Sun Yat-sen University</span> <span class="time-wrapper"><span class="time">2012 - 2016</span></span></p>
 </div>
-<p><img src="images/SYSU.png" style="width:14%"></p>
+<p><img src="images/SYSU_white.png" style="width:13%"></p>
 <div class="desc">
 I completed my B.S. in Mathematics at Sun Yat-sen University, Guangzhou, China.
 </div>
