--- a/publications.html
+++ b/publications.html
@@ -334,6 +334,7 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="academicons.css"/> <link rel="stylesheet" href="styles.css" type="text/css"/></p>
 <hr />
 <p>
+<!-- * Wang, Y., Perera, F., __Guo, J.__, Wheelock, K., Durham, T., Ross, Z., Ananth, C. V., Baccarelli, A., Wang, S., & Herbstman, J. (in press). A methodological pipeline to generate an epigenetic marker of prenatal exposure to air pollution indicators. _Epigenetics_. -->
 <ul>
 <li><p>Schiff, C. S., Zur, K. B., Biggs, L. M., <strong>Guo, J.</strong>, &amp; Pitman, M. J. (2019). Pediatricians’ proficiency in the care of the dysphonic child. <em>The Laryngoscope, 129</em>(8), 1756-1762.</p></li>
 <li><p>Durham, T., Margolis, A., Pagliaccio, D., Garcia, W., Riley, K. W., <strong>Guo, J.</strong>, Wang, S., Peterson, B., Rauh, V., &amp; Herbstman J. (2019). Self-perceived neighborhood quality and children’s depression symptoms in a gentrifying Northern Manhattan. <em>International Journal of Child Health and Human Development, 12</em>(4), 413-424.</p></li>
