--- a/about.html
+++ b/about.html
@@ -337,47 +337,59 @@ $(document).ready(function () {
 <ul class="timeline">
 <!-- Item 1 -->
 <li>
-<div class="direction-l">
+<div class="direction-r">
 <div class="flag-wrapper">
-<p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">September 2018 - present</span></span></p>
+<p><span class="flag">Roche</span> <span class="time-wrapper"><span class="time">January 2021 - present</span></span></p>
 </div>
-<p><img src="images/columbia_white.png" style="width:14%"></p>
+<p><img src="images/Roche_white.png" style="width:20%"></p>
 <div class="desc">
-Currently I’m pursuing a Ph.D. in Biostatistics. Advised by <a href="http://www.columbia.edu/~sw2206/">Dr. Shuang Wang</a>, my research focused on applications of deep learning for electronic health record (EHR) data analysis.
+I currently work as a Data Science Intern at <a href="https://www.roche.com">Roche</a>.
 </div>
 </div>
 </li>
 <!-- Item 2 -->
 <li>
-<div class="direction-r">
+<div class="direction-l">
 <div class="flag-wrapper">
-<p><span class="flag">MediaMath</span> <span class="time-wrapper"><span class="time">Summer 2018</span></span></p>
+<p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">September 2018 - present</span></span></p>
 </div>
-<p><img src="images/mediamath.png" style="width:16%"></p>
+<p><img src="images/columbia_white.png" style="width:18%"></p>
 <div class="desc">
-I previously worked as an Engineer Intern developing machine learning projects at <a href="http://www.mediamath.com">MediaMath</a>.
+I’m pursuing a Ph.D. in Biostatistics, advised by <a href="http://www.columbia.edu/~sw2206/">Dr. Shuang Wang</a>. My research focused on applications of Deep Learning for electronic health record (EHR) data analysis.
 </div>
 </div>
 </li>
 <!-- Item 3 -->
 <li>
-<div class="direction-l">
+<div class="direction-r">
 <div class="flag-wrapper">
-<p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">2016 - 2018</span></span></p>
+<p><span class="flag">MediaMath</span> <span class="time-wrapper"><span class="time">Summer 2018</span></span></p>
 </div>
-<p><img src="images/columbia_white.png" style="width:14%"></p>
+<p><img src="images/mediamath.png" style="width:20%"></p>
 <div class="desc">
-I received a M.S. in Biostatistics with a concentration on Statitical Genetics at Columbia University.
+I previously worked as an Engineer Intern developing machine learning projects at <a href="https://www.mediamath.com">MediaMath</a>.
 </div>
 </div>
 </li>
 <!-- Item 4 -->
 <li>
+<div class="direction-l">
+<div class="flag-wrapper">
+<p><span class="flag">Columbia University</span> <span class="time-wrapper"><span class="time">2016 - 2018</span></span></p>
+</div>
+<p><img src="images/columbia_white.png" style="width:18%"></p>
+<div class="desc">
+I received a M.S. in Biostatistics with a concentration on Statitical Genetics at Columbia University.
+</div>
+</div>
+</li>
+<!-- Item 5 -->
+<li>
 <div class="direction-r">
 <div class="flag-wrapper">
 <p><span class="flag">Sun Yat-sen University</span> <span class="time-wrapper"><span class="time">2012 - 2016</span></span></p>
 </div>
-<p><img src="images/SYSU_white.png" style="width:13%"></p>
+<p><img src="images/SYSU_white.png" style="width:17%"></p>
 <div class="desc">
 I completed my B.S. in Mathematics at Sun Yat-sen University, Guangzhou, China.
 </div>
