--- a/about.html
+++ b/about.html
@@ -343,7 +343,7 @@ $(document).ready(function () {
 </div>
 <p><img src="images/Roche_white.png" style="width:20%"></p>
 <div class="desc">
-I currently work as a Data Science Intern at <a href="https://www.roche.com">Roche</a>.
+I currently work as a Data Scientist Intern at <a href="https://www.roche.com">Roche</a>.
 </div>
 </div>
 </li>
