--- a/publications.html
+++ b/publications.html
@@ -335,9 +335,9 @@ $(document).ready(function () {
 <hr />
 <p>
 <ul>
-<li><p>Wang, Y., Perera, F., <strong>Guo, J.</strong>, Wheelock, K., Durham, T., Ross, Z., Ananth, C. V., Baccarelli, A., Wang, S., &amp; Herbstman, J. (2021). A methodological pipeline to generate an epigenetic marker of prenatal exposure to air pollution indicators. <em>Epigenetics</em>.</p></li>
+<li><p>Wang, Y., Perera, F., <strong>Guo, J.</strong>, Riley, K. W., Durham, T., Ross, Z., Ananth, C. V., Baccarelli, A., Wang, S., &amp; Herbstman, J. B. (2021). A methodological pipeline to generate an epigenetic marker of prenatal exposure to air pollution indicators. <em>Epigenetics</em>, 1-9.</p></li>
 <li><p>Schiff, C. S., Zur, K. B., Biggs, L. M., <strong>Guo, J.</strong>, &amp; Pitman, M. J. (2019). Pediatricians’ proficiency in the care of the dysphonic child. <em>The Laryngoscope, 129</em>(8), 1756-1762.</p></li>
-<li><p>Durham, T., Margolis, A., Pagliaccio, D., Garcia, W., Riley, K. W., <strong>Guo, J.</strong>, Wang, S., Peterson, B., Rauh, V., &amp; Herbstman J. (2019). Self-perceived neighborhood quality and children’s depression symptoms in a gentrifying Northern Manhattan. <em>International Journal of Child Health and Human Development, 12</em>(4), 413-424.</p></li>
+<li><p>Durham, T., Margolis, A., Pagliaccio, D., Garcia, W., Riley, K. W., <strong>Guo, J.</strong>, Wang, S., Peterson, B. S., Rauh, V., &amp; Herbstman J. B. (2019). Self-perceived neighborhood quality and children’s depression symptoms in a gentrifying Northern Manhattan. <em>International Journal of Child Health and Human Development, 12</em>(4), 413-424.</p></li>
 <li><p>Galfalvy, H., <strong>Guo, J.</strong>, Keilp, J., Stanley, B., Oquendo, M., &amp; Mann, J. J. (2018). F111. Multiple Pathways to Suicidal Behavior: Genetic and Neurocognitive Differences Between Suicide Attempters With High and Low Aggression-Impulsivity and Non-Attempters. <em>Biological Psychiatry, 83</em>(9), S280-S281.</p></li>
 </ul>
 </p>
