--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ I'm a Ph.D. Candidate in Biostatistics at <a href="http://www.mailman.columbia.e
 <hr/>
 
 <ul>
-  <li><b>Guo, J.</b>, Riley, K. W., Durham, T., Margolis A. E., Wang, S., Perera, F., & Herbstman, J. B. (2022). <a href="https://www.frontiersin.org/articles/10.3389/fgene.2022.871820/full">Association studies of environmental exposures, DNA methylation and children’s cognitive, behavioral, and mental health problems</a>. <i>Frontiers in genetics</i>, 703.</li>
-
   <li><b>Guo, J.</b>, Lin, W. H. W., Zucker, J. E., Nandakumar, R., Uhlemann, A. C., Wang, S., & Shivakoti, R. (2022). <a href="https://doi.org/10.1210/clinem/dgac003">Inflammation and mortality in COVID-19 hospitalized patients with and without type 2 diabetes</a>. <i>The Journal of Clinical Endocrinology & Metabolism</i>.</li>
+
+  <li><b>Guo, J.</b>, Riley, K. W., Durham, T., Margolis A. E., Wang, S., Perera, F., & Herbstman, J. B. (2022). <a href="https://www.frontiersin.org/articles/10.3389/fgene.2022.871820/full">Association studies of environmental exposures, DNA methylation and children’s cognitive, behavioral, and mental health problems</a>. <i>Frontiers in genetics, 13</i>, 871820.</li>
 
   <li><b>Guo, J.</b>, Yuan, C., Shang, N., Zheng, T., Bello, N. A., Kiryluk, K., Weng, C., & Wang, S. (2021). <a href="https://www.sciencedirect.com/science/article/pii/S153204642100040X">Similarity-based health risk prediction using domain fusion and electronic health records data</a>. <i>Journal of biomedical informatics, 116</i>, 103711.</li>
 </ul>
