--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   caption: "Photo by David Dini, SIPA'14 Columbia University"
 ---
 
-I'm a Ph.D. Candidate in Biostatistics at <a href="http://www.mailman.columbia.edu">Columbia University Mailman School of Public Health</a>. My research focused on Deep Learning, natural language processing (NLP), electronic health record (EHR) data, and statistical genetics. <a href="/about/">More about me.</a>
+I'm an Alpha Researcher at <a href="https://www.trexquant.com">Trexquant</a>. I finished my Ph.D. in Biostatistics from <a href="http://www.mailman.columbia.edu">Columbia University Mailman School of Public Health</a>. My research interests focus on Deep Learning, natural language processing (NLP), quantitative models for Alpha discovery, and statistical genetics. <a href="/about/">More about me.</a>
 
 
 <br>
