--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ header:
   caption: "Photo by David Dini, SIPA'14 Columbia University"
 ---
 
-I'm an Alpha Researcher at <a href="https://www.trexquant.com">Trexquant</a>. I obtained my Ph.D. in Biostatistics from <a href="http://www.mailman.columbia.edu">Columbia University Mailman School of Public Health</a>. My research interests focus on Deep Learning, natural language processing (NLP), quantitative models for Alpha discovery, and statistical genetics. <a href="/about/">More about me.</a>
+I'm a Quantitative Researcher at <a href="https://www.nebularesearch.com">Nebula Research</a>. I obtained my Ph.D. in Biostatistics from <a href="http://www.mailman.columbia.edu">Columbia University Mailman School of Public Health</a>. My research interests focus on deep learning models, natural language processing (NLP), quantitative models for Alpha discovery, and statitical genetics. <a href="/about/">More about me.</a>
 
 
 <br>
